--- a/src/layout/_metalogix-specific.scss
+++ b/src/layout/_metalogix-specific.scss
@@ -1,3 +1,7 @@
+.animate-on-load {
+	@include transition(all 0.3s ease-in-out);
+}
+
 .landing-hero {
 	position: relative;
 	min-height: 70vh;
@@ -27,10 +31,24 @@
 			& h1 {
 				@include sans-serif-bold;
 				line-height: 120%;
+				position: relative;
+				opacity: 0;
+				top: 100px;
+				@include transition(all 1s ease-in-out);
+
+				&.loaded {
+					top: 0;
+					opacity: 1;
+				}
 			}
 
 			& p {
 				margin: 2rem 0;
+				opacity: 0;
+
+				&.loaded {
+					opacity: 1;
+				}
 
 				a {
 					@include sans-serif-black;
@@ -41,6 +59,14 @@
 						color: #fff;
 					}
 				}
+			}
+		}
+
+		&__button {
+			opacity: 0;
+
+			&.loaded {
+				opacity: 1;
 			}
 		}
 	}
